--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -1091,359 +1091,229 @@ svg {
   display: block;
 }
 
-/**
- * Paper Plane
- */
-
-.plane-container {
-  width: 260px;
-  margin: 0px auto;
-  padding-top: 7em;
-  z-index: 3;
+.plane{
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 55%;
+    margin: -70px 0 0 -200px;
+    transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+    transform-style: preserve-3d;
 }
 
-.plane {
-  width: 100%;
-  height: 110px;
+.plane:nth-child(1){
+    -webkit-animation: planeOne 4000ms linear 0ms infinite;
+    -moz-animation: planeOne 4000ms linear 0ms infinite;
+    -ms-animation: planeOne 4000ms linear 0ms infinite;
+    -o-animation: planeOne 4000ms linear 0ms infinite;
+    animation: planeOne 4000ms linear 0ms infinite;
 }
 
-.plane-container {
-    -webkit-animation: paper-plane-scoping 2s alternate infinite;
-    -moz-animation: paper-plane-scoping 2s alternate infinite;
-    -ms-animation: paper-plane-scoping 2s alternate infinite;
-    -o-animation: paper-plane-scoping 2s alternate infinite;    
-    animation: paper-plane-scoping 2s alternate infinite;
-
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
-    -ms-animation: paper-plane-scoping 2s alternate infinite;    
-    -o-animation: paper-plane-scoping 2s alternate infinite;        
-    animation-timing-function: linear;
+.plane:nth-child(2){
+    -webkit-animation: planeTwo 4000ms linear 1000ms infinite;
+    -moz-animation: planeTwo 4000ms linear 1000ms infinite;
+    -ms-animation: planeTwo 4000ms linear 1000ms infinite;
+    -o-animation: planeTwo 4000ms linear 1000ms infinite;
+    animation: planeTwo 4000ms linear 1000ms infinite;
 }
 
-@-webkit-keyframes paper-plane-scoping {
-  0% {
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  100% {
-    -webkit-transform: translateY(100px);
-    -moz-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    -o-transform: translateY(100px);
-    transform: translateY(100px);
-  }
+.left-wing{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 100px 200px 0px;
+    border-color: transparent transparent #333 transparent;
+    transform: translateX(50px) rotateZ(-4deg);
+    transform-origin: left top;
 }
 
-@-moz-keyframes paper-plane-scoping {
-  0% {
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  100% {
-    -webkit-transform: translateY(100px);
-    -moz-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    -o-transform: translateY(100px);
-    transform: translateY(100px);
-  }
+.right-wing{
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -50px;
+    border-style: solid;
+    border-width: 0 0px 200px 100px;
+    border-color: transparent transparent #333 transparent;
+    transform: translateX(-50px) rotateZ(4deg);
+    transform-origin: right top;
 }
 
-@-ms-keyframes paper-plane-scoping {
-  0% {
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  100% {
-    -webkit-transform: translateY(100px);
-    -moz-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    -o-transform: translateY(100px);
-    transform: translateY(100px);
-  }
+.left-body{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -20px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 40px 200px 0px;
+    border-color: transparent transparent #333 transparent;
+    transform: translateX(20px) rotateZ(-4deg) rotateY(-110deg);
+    transform-origin: left top;
 }
 
-@-o-keyframes paper-plane-scoping {
-  0% {
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  100% {
-    -webkit-transform: translateY(100px);
-    -moz-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    -o-transform: translateY(100px);
-    transform: translateY(100px);
-  }
+.right-body{
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -20px;
+    border-style: solid;
+    border-width: 0 0px 200px 40px;
+    border-color: transparent transparent #333 transparent;
+    transform: translateX(-20px) rotateZ(4deg) rotateY(110deg);
+    transform-origin: right top;
 }
 
-@keyframes paper-plane-scoping {
-  0% {
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  100% {
-    -webkit-transform: translateY(100px);
-    -moz-transform: translateY(100px);
-    -ms-transform: translateY(100px);
-    -o-transform: translateY(100px);
-    transform: translateY(100px);
-  }
+@-webkit-keyframes planeOne {
+    from {
+        -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-.plane {
-    -webkit-animation-timing-function: ease-in-out;
-    -moz-animation-timing-function: ease-in-out;
-    -ms-animation-timing-function: ease-in-out;
-    -o-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-
-    -webkit-animation: paper-plane-soaring 4s forwards infinite;
-    -moz-animation: paper-plane-soaring 4s forwards infinite;
-    -ms-animation: paper-plane-soaring 4s forwards infinite;
-    -o-animation: paper-plane-soaring 4s forwards infinite;
-    animation: paper-plane-soaring 4s forwards infinite;
+@-moz-keyframes planeOne {
+    from {
+        -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-@-webkit-keyframes paper-plane-soaring {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  40% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  50% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  60% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  70% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@-ms-keyframes planeOne {
+    from {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-@-moz-keyframes paper-plane-soaring {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  40% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  50% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  60% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  70% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@-o-keyframes planeOne {
+    from {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-@-ms-keyframes paper-plane-soaring {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  40% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  50% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  60% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  70% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@keyframes planeOne {
+    from {
+        transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-@-o-keyframes paper-plane-soaring {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  40% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  50% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  60% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  70% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@-webkit-keyframes planeTwo {
+    from {
+        -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
 
-@keyframes paper-plane-soaring {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  40% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  50% {
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    transform: rotate(15deg);
-  }
-  60% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  70% {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@-moz-keyframes planeTwo {
+    from {
+        -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
 }
+
+@-ms-keyframes planeTwo {
+    from {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
+}
+
+@-o-keyframes planeTwo {
+    from {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+        opacity: 0;
+    }
+}
+
+@keyframes planeTwo {
+    from {
+        transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    to {
+        transform: rotateZ(60deg) rotateX(60deg) rotateY(360deg) translateY(-500%);
+       opacity: 0;
+    }
+}
+
 
 /**
  * Clouds
@@ -1692,19 +1562,8 @@ svg {
 }
 
     @media (max-width: 767px) {
-        .plane-container {
-            width: 400px;
-            padding-top: 1em;
-            z-index: 3;
-            padding-left: 8em;
-        }
-
         .plane {
-          width: 100%;
-          height: 80px;
-        }
-        .row-text {
-            padding-top: 8em;
+            display: none;
         }
         .four-oh-four {
             padding-top: 0.8em;
