--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -1053,18 +1053,18 @@ input:focus {
 }
 
 .frame {
-  width: 500px;
-  height: auto;
-  margin: 3em 1em 1em -6em;
-  position: absolute;
-  padding-top: 1em;
-  width: 100%;
+    width: 500px;
+    height: auto;
+    margin: 3em 1em 1em -6em;
+    position: absolute;
+    padding-top: 1em;
+    width: 100%;
 }
 
 svg {
-  max-width: 100%;
-  height: auto;
-  display: block;
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 .error-page {
@@ -1074,7 +1074,8 @@ svg {
 .four-oh-four {
     padding-top: 0.5em;
     font-size: 12em;
-    text-align: center;    
+    text-align: center;
+    color: #F03B5B;    
 }
 
 .error-text {
@@ -1086,9 +1087,9 @@ svg {
 }
 
 svg {
-  max-width: 100%;
-  height: auto;
-  display: block;
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 .plane{
@@ -1097,25 +1098,25 @@ svg {
     height: 400px;
     top: 50%;
     left: 55%;
-    margin: -70px 0 0 -200px;
+    margin: -60px 0 0 -200px;
     transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
     transform-style: preserve-3d;
 }
 
 .plane:nth-child(1){
-    -webkit-animation: planeOne 4000ms linear 0ms infinite;
-    -moz-animation: planeOne 4000ms linear 0ms infinite;
-    -ms-animation: planeOne 4000ms linear 0ms infinite;
-    -o-animation: planeOne 4000ms linear 0ms infinite;
-    animation: planeOne 4000ms linear 0ms infinite;
+    -webkit-animation: planeFirst 4000ms linear 0ms infinite;
+    -moz-animation: planeFirst 4000ms linear 0ms infinite;
+    -ms-animation: planeFirst 4000ms linear 0ms infinite;
+    -o-animation: planeFirst 4000ms linear 0ms infinite;
+    animation: planeFirst 4000ms linear 0ms infinite;
 }
 
 .plane:nth-child(2){
-    -webkit-animation: planeTwo 4000ms linear 1000ms infinite;
-    -moz-animation: planeTwo 4000ms linear 1000ms infinite;
-    -ms-animation: planeTwo 4000ms linear 1000ms infinite;
-    -o-animation: planeTwo 4000ms linear 1000ms infinite;
-    animation: planeTwo 4000ms linear 1000ms infinite;
+    -webkit-animation: planeSecond 4000ms linear 1000ms infinite;
+    -moz-animation: planeSecond 4000ms linear 1000ms infinite;
+    -ms-animation: planeSecond 4000ms linear 1000ms infinite;
+    -o-animation: planeSecond 4000ms linear 1000ms infinite;
+    animation: planeSecond 4000ms linear 1000ms infinite;
 }
 
 .left-wing{
@@ -1146,7 +1147,7 @@ svg {
     transform-origin: right top;
 }
 
-.left-body{
+.left-side{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1160,7 +1161,7 @@ svg {
     transform-origin: left top;
 }
 
-.right-body{
+.right-side{
     position: absolute;
     width: 0;
     height: 0;
@@ -1174,7 +1175,7 @@ svg {
     transform-origin: right top;
 }
 
-@-webkit-keyframes planeOne {
+@-webkit-keyframes planeFirst {
     from {
         -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
         opacity: 1;
@@ -1188,7 +1189,7 @@ svg {
     }
 }
 
-@-moz-keyframes planeOne {
+@-moz-keyframes planeFirst {
     from {
         -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
         opacity: 1;
@@ -1202,7 +1203,7 @@ svg {
     }
 }
 
-@-ms-keyframes planeOne {
+@-ms-keyframes planeFirst {
     from {
         -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
         opacity: 1;
@@ -1216,7 +1217,7 @@ svg {
     }
 }
 
-@-o-keyframes planeOne {
+@-o-keyframes planeFirst {
     from {
         -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
         opacity: 1;
@@ -1230,7 +1231,7 @@ svg {
     }
 }
 
-@keyframes planeOne {
+@keyframes planeFirst {
     from {
         transform: rotateZ(60deg) rotateX(60deg) rotateY(90deg) translateY(200%);
         opacity: 1;
@@ -1244,7 +1245,7 @@ svg {
     }
 }
 
-@-webkit-keyframes planeTwo {
+@-webkit-keyframes planeSecond {
     from {
         -webkit-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
         opacity: 1;
@@ -1258,7 +1259,7 @@ svg {
     }
 }
 
-@-moz-keyframes planeTwo {
+@-moz-keyframes planeSecond {
     from {
         -moz-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
         opacity: 1;
@@ -1272,7 +1273,7 @@ svg {
     }
 }
 
-@-ms-keyframes planeTwo {
+@-ms-keyframes planeSecond {
     from {
         -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
         opacity: 1;
@@ -1286,7 +1287,7 @@ svg {
     }
 }
 
-@-o-keyframes planeTwo {
+@-o-keyframes planeSecond {
     from {
         -ms-transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
         opacity: 1;
@@ -1300,7 +1301,7 @@ svg {
     }
 }
 
-@keyframes planeTwo {
+@keyframes planeSecond {
     from {
         transform: rotateZ(60deg) rotateX(60deg) rotateY(0deg) translateY(200%);
         opacity: 1;
@@ -1330,46 +1331,46 @@ svg {
 }
 
 .cloud {
-  position: absolute;
-  top: 20%;
-  width: 300px;
-  right: 0;
-  opacity: 1;
+    position: absolute;
+    top: 20%;
+    width: 300px;
+    right: 0;
+    opacity: 1;
 }
 
 .cloud.front {
-  z-index: 9;
+    z-index: 9;
 }
 
 .cloud.distant {
-  z-index: 1;
+    z-index: 1;
 }
 
 .cloud.background {
-  z-index: 1;
+    z-index: 1;
 }
 
 .cloud.smaller {
-  margin-right: 400px;
-  width: 200px;
-  margin-top: 50px;
+    margin-right: 400px;
+    width: 200px;
+    margin-top: 50px;
 }
 
 .cloud.small {
-  margin-right: 200px;
-  width: 350px;
+    margin-right: 200px;
+    width: 350px;
 }
 
 .cloud.big {
-  width: 600px;
-  margin-top: 160px;
-  margin-right: 150px;
+    width: 600px;
+    margin-top: 160px;
+    margin-right: 150px;
 }
 
 .cloud.massive {
-  width: 700px;
-  margin-top: 0px;
-  margin-right: 0px;
+    width: 700px;
+    margin-top: 0px;
+    margin-right: 0px;
 }
 
 .cloud {
