profile page, working follow button, intelligent model_feed handling

--- a/OGV/client/templates/menu.html
+++ b/OGV/client/templates/menu.html
@@ -10,6 +10,7 @@
 			<a class="rm-item rm-log-in" id="log-in" href="/log-in">Login</a>
 		{{else}}
 			<button class="rm-item rm-log-out" id="log-out" title="Log out"><img src="/icons/logout.png" width="30px" height="30px"></button>
+			<a href="/profile/{{ userId }}">Profile</a>
 		{{/unless}}
 			</span>
 		</div>	
