--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -16,21 +16,25 @@
 <template name ="modelPost">
     <div class="feed-item model-post">
       <div class="post-section post-sidebar user-info">
-		<a href="/profile/{{ owner._id }}"><div class="post-item user-image" style="background:url('{{userImg}}');"></div></a>
+		<a href="/profile/{{ owner._id }}">
+			<div class="post-item user-image" style="background:url('{{userImg}}');"></div>
+		</a>
 		<div class="post-item post-meta user-meta"></div>
       </div>
 	    
      <div class="post-section post-content model-info">
-		<p class="post-item post-text user-name"> <a href="/profile/{{ owner._id }}"> {{ owner.profile.name }}</a> posted {{ name }} <br>on <em>{{uploadedAt}}</em></p>
+		<p class="post-item post-text user-name"> 
+			<a href="/profile/{{ owner._id }}"> {{ owner.profile.name }}</a> posted {{ name }} <br>on <em>{{uploadedAt}}</em>
+		</p>
 		<div class="post-item">
 	        {{> modelView }}	
-		<p class="post-text post-subitem"> {{ about }} </p>
+			<p class="post-text post-subitem"> {{ about }} </p>
 		</div>
         <div class="post-item love-wrapper">
             {{> lovemeter }}
         </div>
         <div class="post-item comments-wrapper">
-        {{> comments }}    
+        	{{> comments }}    
         </div>
      </div>
      <span class="clear"></span>
@@ -41,6 +45,10 @@
 </template>
 <template name="modelView">
 	<div class="post-item model-preview" style="background-image:url(&quot;{{thumbImg.url}}&quot;);">
-		<a class = " model-preview-link" href="/models/{{_id}}"><h2 class="post-subitem model-name"><span class="model-link-text">{{ name }}</span></h2></a>
+		<a class = " model-preview-link" href="/models/{{_id}}">
+			<h2 class="post-subitem model-name">
+				<span class="model-link-text">{{ name }}</span>
+			</h2>
+		</a>
 	</div>
 </template>
