--- a/OGV/client/templates/404.html
+++ b/OGV/client/templates/404.html
@@ -30,13 +30,13 @@
 		        </div>
 
 		        <!-- For Space -->
-		        <div class="col-lg-3 col-md-3 col-sm-3 ">
+		        <div class="col-lg-3 col-md-3 col-sm-3 space">
 		        </div>            
 
 		        <div class="col-lg-6 col-md-6 col-sm-6">
 		            <div class="row row-text">
 				    	<h1 class="four-oh-four">404</h1>
-				    	<h3 class="error-text">Page your are looking can't be found</h3>
+				    	<h3 class="error-text">Page your are looking can't be found. Go back to <a href="/models" class="modelPageLink">models page.</a> </h3>
 		            </div>
 		        </div>
 		    </div>    
