--- a/OGV/client/templates/profile_page.html
+++ b/OGV/client/templates/profile_page.html
@@ -1,6 +1,6 @@
 <template name="profilePage">
     <div id="profileContainer">
-        <a href="/profile/{{ currentUser._id }}">
+        <a href="/profile/{{ person._id }}">
             <div class="post-item user-image" style="background-image:url(&quot;{{userImg}}&quot;); width:200px; height:200px;left:70px;position:relative;"></div>
         </a>
         <div id="profileInfo">
@@ -9,9 +9,15 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;
             <strong>FOLLOWING {{followingCount}}</strong><br>
-            <button id = "followButton" >+FOLLOW</button><br>
-            <button id = "unfollowButton" style="display: none;">UNFOLLOW</button>
-
+            
+            {{#if urlUser}}
+                {{#if currentFollowsThis}}
+                    <button id = "unfollowButton">UNFOLLOW</button>
+                {{else}}
+                    <button id = "followButton">+FOLLOW</button>
+                {{/if}}
+            {{/if}}
+            
             <h3>{{ person.profile.bio }} </h3>
             <strong>Here Since:</strong> <em>{{ person.createdAt }}</em> <br>
         </div>
@@ -21,32 +27,6 @@
         <hr>
         {{> profileModelFeed}}
     </div>
-    
-    <!-- Handling button visibility -->
-    <script>
-        //take out id from url
-        var parts = location.href.split('/');
-		var id = parts.pop();
-
-        //user currently logged in
-		var currentUser = Meteor.user();
-
-        var checkForUser = Meteor.users.findOne({_id: currentUser._id}, {"profile.following": id });
-
-        if( typeof checkForUser == 'undefined' ){
-            document.getElementById("followButton").style.display="block";
-            document.getElementById("unfollowButton").style.display="none";
-        } else {
-            document.getElementById("followButton").style.display="none";
-            if ( currentUser._id == id ) {
-                document.getElementById("unfollowButton").style.display="none";
-            } else {
-                document.getElementById("unfollowButton").style.display="block";
-            }        
-            
-        }
-
-    </script>
 </template>
 
 
