--- a/OGV/client/templates/profile_page.html
+++ b/OGV/client/templates/profile_page.html
@@ -12,9 +12,9 @@
             
             {{#if urlUser}}
                 {{#if currentFollowsThis}}
-                    <button id = "unfollowButton">UNFOLLOW</button>
+                    <button class="btn primary-btn btn-default" id="unfollowButton"> UNFOLLOW </button>
                 {{else}}
-                    <button id = "followButton">+FOLLOW</button>
+                    <button class="btn primary-btn btn-default" id="followButton"> + FOLLOW </button>
                 {{/if}}
             {{/if}}
             
