follower array updating (insecure), bgcolor renderer changed, button to profile on renderer

--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -36,6 +36,11 @@
 			<p class="sm-menu-text">Embed</p>
 		</div>
 
+		<div class="sm-item" id="sm-item-owner">
+		<a href = "/profile/{{ownerId}}"><img src="/icons/User.png" width="35px" height="35px">
+			<p class="sm-menu-text">Owner</p></a>
+		</div>
+		
 	</div>
 	<div id="controller" >
 	
