validation in about section - user and model, showing number of characters left

--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -10,11 +10,11 @@
 			<h4 class="meta-links" align="center" style="color:#e74c3c">OR SIGN IN WITH</h4>
 			
 			<div align="center">
-	        	<img id="loginGoogle" src="/icons/google-plus.png" width="50px" height="50px"/>
-	        	<img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/>
-	        	<img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/>
+	        	<a href="#"><img id="loginGoogle" src="/icons/google-plus.png" width="50px" height="50px"/></a>
+	        	<a href="#"><img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/></a>
+	        	<a href="#"><img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/></a>
 	        	<!-- Uncomment the line below while configuring 3rd party login -->
-	        	<!-- {{> loginButtons}} -->
+	        	accou{{> loginButtons}}
 			</div>	 
 
 		<a class = "meta-links" id="show-forgot-password" href="/forgot-password" > Forgot Password </a>
