--- a/OGV/client/templates/profile_page.html
+++ b/OGV/client/templates/profile_page.html
@@ -17,8 +17,8 @@
                     <button class="btn primary-btn btn-default" id="followButton"> + FOLLOW </button>
                 {{/if}}
             {{/if}}
-            
-            <h3>{{ person.profile.bio }} </h3>
+            <br>
+            <br><h4><strong>{{ person.profile.bio }} </strong></h4>
             <strong>Here Since:</strong> <em>{{ person.createdAt }}</em> <br>
         </div>
     </div>
