google+ profile image, feedback slide-in window, character limit

--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -14,7 +14,7 @@
 	        	<a href="#"><img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/></a>
 	        	<a href="#"><img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/></a>
 	        	<!-- Uncomment the line below while configuring 3rd party login -->
-	        	accou{{> loginButtons}}
+	        	{{> loginButtons}}
 			</div>	 
 
 		<a class = "meta-links" id="show-forgot-password" href="/forgot-password" > Forgot Password </a>
