--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -1,4 +1,5 @@
 <template name = "modelViewer">
+
 	<div id="overlay-comments">
 	<div id ="comments-close-button"> X </div>
 	<div class="comments">
@@ -48,6 +49,11 @@
 	</div>
 
 	<style>
+		#model-container
+		{
+			background-color:red;
+		}
+
 		#controller {
 			position: fixed;
     		top: 8%;
