--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -316,7 +316,6 @@ input:focus {
 	left:0;
 	top:0;
 	z-index: 900;
-
 }
 
 .dropzone-text{
@@ -624,4 +623,60 @@ hr {
 	position: relative;
 	top: -43px;
 	left: 213px;
+}
+
+#feedbackDiv
+{
+	z-index: 1400;
+	position:fixed;
+    top:50%;
+    right: -10px;
+	color:#333;
+	height:5px;
+	width:90px;
+	background-color: blue;
+    transform: rotate(270deg);	
+}
+
+#feedbackDiv a h4
+{
+	color:white;
+	position:relative;
+	bottom:8px;
+}
+
+/*feedback*/
+.cbp-spmenu {
+	position: fixed;
+	right:100px;
+}
+
+.cbp-spmenu-vertical {
+	height: 50%;
+	top: 10%;
+	z-index: 1200;
+}
+
+/* Vertical menu that slides from the left or right */
+.cbp-spmenu-right {
+	right: -500px;
+}
+
+.cbp-spmenu-right.cbp-spmenu-open {
+	right: 25px;
+}
+
+
+/* Transitions */
+.cbp-spmenu{
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+#feedbackContainer
+{
+	background-color: white;
+	padding:5% 5% 5% 5%;
+	 border-radius: 15px;
 }
